--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aquamarine;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+}
+
+button {
+  background-color: white;
+  border: none;
+  border: 2px solid black;
+  padding: 10px 30px;
+  text-align: center;
+  font-size: 1rem;
+  box-shadow: 2px 2px black;
+}
+button:hover {
+  background-color: black;
   color: white;
+  transition: 0.3s ease;
+  transform: scale(1.1);
+  box-shadow: none;
+}
+.action {
+  font-size: 1.5rem;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 20px;
+  word-wrap: break-word;
+  max-width: 150px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.commands {
+  margin: 40px 0;
 }
